[project]
name = "comfyui-universal-styler"
description = "A research Node based project on Artificial Intelligence using ComfyUI visual editor with Stable diffusion Local processing focus in mind. This custom node is intended to serve the purpose to offer a large palette of prompting scenrarios, based on Public Checkpoint Models OR/AND Private custom Models and LoRas. It includes an integrated learning machine process as well as a set of workflows."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/KoreTeknology/ComfyUI-Universal-Styler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Universal-Styler"
Icon = ""
